# usc_lr_timer

./: .gitignore  .travis.yml  README.md  pyproject.toml  tasks.py
tests/: conftest.py  test_google_sheets.py  test_login.py  test_model.py  test_talk_to_google.py  test_view.py
tests/bdd/: test_login_bdd.py  test_timer_bdd.py
tests/bdd/features/: login.feature  timer.feature
usc_lr_timer/: __main__.py  app.py  constants.py  google_sheets.py  login.py  model.py  talk_to_google.py  view.py
